[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humans"
version = "0.0.1"
authors = [
  { name="Augustine", email="augustineodu9@gmail.com" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/augustynX99/humans-pypi-project-"
Issues = "https://github.com/augustynX99/humans-pypi-project-"